fixed message counter text not align bug

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 html, 
 body{ 
 	margin: 0;
-	font-family: 'Open Sans'
+	font-family: 'Open Sans';
 	font-weight: 400;
  }
 
@@ -73,30 +73,36 @@ body{
 .chat__date {
 	color: rgba(0, 0, 0, 0.5);
 	font-size: 10px;
-	
-
+	display: block;
 }
 
 .message-num {
-	margin-left: 8px;
-	width: 17px;
-	height: 17px;
-	background-color: #D85353;
+	position: relative;
 	font-size: 11px;
-	color: white;
-	display: flex;
+	color: #F7F7F7;
+	float: right;
+	width: 24px;
+	text-align: center;
+	line-height: 24px;
 	margin-top: 3px;
-	justify-content: center;
-	padding-top: 2px;
-	border-radius: 50%;
-	font-weight: 600;
-	box-sizing: border-box;
+}
 
-	
+.message-num::before{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 24px;
+	height: 24px;
+	display: block;
+	content: '';
+	border-radius: 50%;
+	background: #D85353;
+	z-index: -10;
 }
 
 .chat__number {
-	
+	overflow: hidden;	
 }
 
 .footer {
